# index-lab

./: ADDING_NEW_ALGORITHM.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/bench-runner/: Cargo.toml
crates/bench-runner/src/: main.rs  scenarios.rs
crates/index-apex/: Cargo.toml
crates/index-apex/src/: adaptive.rs  bucket.rs  config.rs  error.rs  graph.rs  lib.rs  lsh.rs  modality.rs  robustness.rs  router.rs
crates/index-apex/tests/: basic_test.rs
crates/index-armi/: Cargo.toml
crates/index-armi/src/: adaptive.rs  config.rs  energy.rs  error.rs  graph.rs  lib.rs  modality.rs
crates/index-armi/tests/: adaptive_test.rs  deterministic_test.rs  energy_test.rs  multimodal_test.rs  shift_test.rs
crates/index-atlas/: Cargo.toml
crates/index-atlas/src/: config.rs  error.rs  hybrid_bucket.rs  learner.rs  lib.rs  sparse.rs
crates/index-convergence/: Cargo.toml
crates/index-convergence/src/: adaptive_lsh.rs  bucket.rs  config.rs  edge_pruning.rs  empty_bucket_handler.rs  ensemble_router.rs  error.rs  hierarchical_graph.rs  learned_fusion.rs  lib.rs  modality.rs  multi_strategy.rs  online_router.rs  temporal.rs
crates/index-convergence/tests/: basic_test.rs
crates/index-core/: Cargo.toml
crates/index-core/src/: lib.rs
crates/index-fusion/: Cargo.toml
crates/index-fusion/src/: lib.rs
crates/index-hnsw/: Cargo.toml
crates/index-hnsw/src/: lib.rs
crates/index-hybrid/: Cargo.toml
crates/index-hybrid/src/: lib.rs
crates/index-ivf/: Cargo.toml
crates/index-ivf/src/: lib.rs
crates/index-lim/: Cargo.toml
crates/index-lim/src/: lib.rs
crates/index-linear/: Cargo.toml
crates/index-linear/src/: lib.rs
crates/index-nexus/: Cargo.toml
crates/index-nexus/src/: lib.rs
crates/index-pq/: Cargo.toml
crates/index-pq/src/: lib.rs
crates/index-prism/: Cargo.toml
crates/index-prism/src/: lib.rs
crates/index-seer/: Cargo.toml
crates/index-seer/src/: lib.rs
crates/index-swift/: Cargo.toml
crates/index-swift/src/: lib.rs
crates/index-synthesis/: Cargo.toml
crates/index-synthesis/src/: adaptive.rs  bucket.rs  config.rs  error.rs  graph.rs  lib.rs  lsh.rs  modality.rs  robustness.rs  router.rs  temporal.rs
crates/index-synthesis/tests/: basic_test.rs
crates/index-universal/: Cargo.toml
crates/index-universal/src/: autotune.rs  cache.rs  config.rs  error.rs  graph.rs  lib.rs  router.rs
crates/index-vortex/: Cargo.toml
crates/index-vortex/src/: kmeans.rs  lib.rs
crates/index-zenith/: Cargo.toml
crates/index-zenith/src/: lib.rs
crates/index-zenith/tests/: basic_test.rs
research/: README.md  SOTA_SUMMARY.md  algorithm_findings.md  algorithm_flaws_documentation.md  apex_analysis.md  apex_implementation_analysis.md  armi_analysis.md  atlas_analysis.md  convergence_analysis.md  fusion_analysis.md  hybrid_analysis.md  lim_algorithm_analysis.md  literature_review.md  new_algorithm.md  nexus_analysis.md  nexus_proposal.md  prism_analysis.md  prism_proposal.md  research_gap.md  research_gaps.md  research_summary.md  seer_analysis.md  swift_analysis.md  swift_proposal.md  synthesis_analysis.md  synthesis_critical_analysis.md  universal_analysis.md  vortex_analysis.md  vortex_proposal.md  zenith_analysis.md
