[workspace]
members = [
    "crates/index-core",
    "crates/index-linear",
    "crates/bench-runner",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
