[workspace]
members = [
    "crates/index-core",
    "crates/index-linear",
    "crates/index-hnsw",
    "crates/index-ivf",
    "crates/index-pq",
    "crates/index-lim",
    "crates/index-hybrid",
    "crates/index-seer",
    "crates/index-swift",
    "crates/index-prism",
    "crates/index-nexus",
    "crates/index-fusion",
    "crates/bench-runner",
    "crates/index-vortex",
    "crates/index-atlas",
    "crates/index-armi",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
