[package]
name = "bench-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
index-core = { path = "../index-core" }
index-linear = { path = "../index-linear" }
index-hnsw = { path = "../index-hnsw" }
index-ivf = { path = "../index-ivf" }
index-pq = { path = "../index-pq" }
index-lim = { path = "../index-lim" }
index-hybrid = { path = "../index-hybrid" }
index-seer = { path = "../index-seer" }
index-swift = { path = "../index-swift" }
index-prism = { path = "../index-prism" }
index-nexus = { path = "../index-nexus" }
index-fusion = { path = "../index-fusion" }
index-vortex = { path = "../index-vortex" }
index-armi = { path = "../index-armi" }
index-apex = { path = "../index-apex" }
index-synthesis = { path = "../index-synthesis" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

