[package]
name = "index-atlas"
version = "0.1.0"
edition = "2021"

[dependencies]
index-core = { path = "../index-core" }
index-hnsw = { path = "../index-hnsw" }
anyhow = "1.0"
thiserror = "2.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.16"
rand = "0.8"
rayon = "1.7"

[dev-dependencies]
approx = "0.5"
