[package]
name = "index-hybrid"
version = "0.1.0"
edition = "2021"
description = "Hybrid Dense-Sparse Vector Index with Adaptive Score Fusion"

[dependencies]
anyhow = { workspace = true }
index-core = { path = "../index-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
