[package]
name = "index-vortex"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
index-core = { path = "../index-core" }
index-hnsw = { path = "../index-hnsw" }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
